Prevent text jumping because of font-weight change on active tabs item
[MAILPOET-2776]

--- a/assets/css/src/components/_steps.scss
+++ b/assets/css/src/components/_steps.scss
@@ -64,7 +64,7 @@
 
   // Hack so the text is not jumping when changed to bold when active
   &:before {
-    content: attr(title);
+    content: attr(data-title);
     display: block;
     font-weight: bold;
     height: 0;
